=======================
Changes in z3c.filetype
=======================

After
=====

2007/12/21 1.1.1
================

 - added an interface for BMP image files
 - make sure unknown formats are not recognized as a default format


2007/12/06 1.1.0
================

 - new mimetype interface IAudioMPEGType
 - mimetype extension for audio/mpeg layer 3
 - removed setup.cfg
 - added CHANGES.txt
